fix: 1046-fix-dashboard-search-bar-overlap-mobile (#1059)
* solve the sort elignment css

* fixed the inline style issue

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,10 @@ p {
   color: var(--lightGrey);
 }
 
+#sort{
+  width: 80px;
+}
+
 .form-control {
   padding: 10px;
 }
